Added the Carousel in the Home page. Separated the each images in the CarouselItem and pass the props to send the data and return the carouselItem

--- a/style.css
+++ b/style.css
@@ -224,3 +224,8 @@ img {
   .copyright-background{
     background-color: rgba(0, 0, 0, 0.05);
   }
+
+  .carousel-style{
+    height:700px;
+    object-fit: strech;
+  }
