--- a/style.css
+++ b/style.css
@@ -233,3 +233,12 @@ img {
   .navbar-logo{
     font-weight: 900;
   }
+
+  a{
+    text-decoration: none;
+    color: #5161ce;
+  }
+
+
+
+  /*  */
